# ntfy

./: .gitignore  LICENSE  README.md  pyproject.toml
ntfy/: __init__.py  cli.py
